fix: narrower results table on smaller devices; formatting

--- a/src/components/game/game.css
+++ b/src/components/game/game.css
@@ -14,19 +14,43 @@
   }
 
   .result-row.correct {
-    background-color: #9cdbad
+    background-color: #9cdbad;
   }
 
   .result-row.incorrect {
-    background-color: #eb9696
+    background-color: #eb9696;
   }
-  
-  font-size: 1.5em;
+
+  table {    
+    font-size: 1.5em;
+  }
+
+  @media (max-width: 600px) {
+    table {
+      width: 310px;
+      font-size: 0.9em;
+    }
+  }
+
+  @media (min-width: 601px) and (max-width: 1000px) {
+    table {
+      width: 500px;
+      font-size: 1.1em;
+    }
+  }
 }
 
 @keyframes pop {
-  0% { transform: scale(1); }
-  30% { transform: scale(1.2); }
-  60% { transform: scale(0.95); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(1.2);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
